--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 </section>
 
 <footer>
-  Built for school newspapers. Inline image tokens like &lt;image-1&gt; are supported in content.
+  Inline image tokens like &lt;image-1&gt; are supported in content. Please use them to the best of your ability or I will eat your dinner
 </footer>
 
 <script>
