--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <label>Category Filter</label>
         <select id="filterCategory">
           <option value="ALL">All</option>
-          <option>Campus Life</option>
+          <option>School Life</option>
           <option>Sports</option>
           <option>Arts & Culture</option>
           <option>Academics</option>
@@ -383,7 +383,7 @@
   let selectedId = null;
 
   const CATEGORY_OPTIONS = [
-    "Campus Life",
+    "School Life",
     "Sports",
     "Arts & Culture",
     "Academics",
@@ -455,7 +455,7 @@
       {
         "id": 1,
         "isFeatured": true,
-        "category": "Campus Life",
+        "category": "School Life",
         "title": "Debate Team Wins State Championship",
         "author": "Jane Doe",
         "date": "Oct 25, 2025",
